# Trumpkart.com

./: .env  .gitignore  Procfile  README.md  build.sh  cert.crt  cert.key  data.json  db.sqlite3  dump_to_neon.py  e -i e25c1eb5a189e07379b003ffa289c4d1ba257bc0^  how e25c1eb  how e25c1eb --stat  migrate_to_cloudinary.py  pyproject.toml  render.yaml  render.yml  replace.txt  requi  requirements.txt
Ecom/: settings.py  urls.py
Shop/: admin.py  apps.py  forms.py  models.py  signals.py  sitemaps.py  urls.py  views.py
Shop/management/commands/: fix_image_paths.py  sync_orders.py
Shop/migrations/: 0001_initial.py  0002_alter_addressmodel_table_alter_carousel_table_and_more.py  0003_order_payment_status_order_razorpay_payment_id.py  0004_alter_carousel_carousel_image_alter_category_image_and_more.py  0005_productrating.py  0006_productrating_product_rat_product_34f46e_idx_and_more.py  0007_product_shop_produc_name_a2070e_idx_and_more.py  0008_remove_order_payment_status_order_canceled_at_and_more.py  0009_alter_order_options_remove_order_confirmed_at_and_more.py  0010_order_return_approved_at.py  0011_product_product_image_2_product_product_image_3.py  0012_shippinglabel.py  0023_alter_addressmodel_zipcode.py  0024_alter_category_name_alter_product_name.py  0025_alter_category_name.py  0026_alter_category_name.py
Shop/services/: google_sheets_service.py
Shop/templates/: sw.js
Shop/templates/Shop/: FAQ.html  (+14 more)
Shop/templatetags/: custom_filters.py
static/: manifest.json  sw.js
static/css/: style.css
staticfiles/: staticfiles.json
staticfiles/css/: style.css
(+20 files in other folders)
