[tool.poetry]
name = "shopkart"
version = "0.1.0"
description = ""
authors = ["kisho121 <kishorehitter1995@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
certifi = "2024.7.4"
cffi = "1.17.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
crispy-bootstrap5 = "2024.2"
cryptography = "43.0.0"
dj-database-url = "2.2.0"
django = "5.1"
django-allauth = "64.0.0"
django-crispy-forms = "2.3"
django-debug-toolbar = "4.4.6"
django-extensions = "3.2.3"
django-jazzmin = "3.0.0"
django-otp = "1.5.1"
django-widget-tweaks = "1.5.0"
git-filter-repo = "2.45.0"
gunicorn = "23.0.0"
idna = "3.8"
markupsafe = "2.1.5"
mysqlclient = "2.2.4"
packaging = "24.1"
pillow = "10.3.0"
psycopg2 = "2.9.9"
pycparser = "2.22"
pygments = "2.18.0"
pyjwt = "2.9.0"
pyopenssl = "24.2.1"
pypng = "0.20220715.0"
python-dateutil = "2.9.0.post0"
python-decouple = "3.8"
razorpay = "1.4.2"
reportlab = "4.2.2"
requests = "2.32.3"
setuptools = "71.1.0"
six = "1.16.0"
sqlparse = "0.5.0"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
whitenoise = "6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
